crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_class.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesDocstring
    body: Single quote docstring found but double quotes preferred
    commit: Replace single quotes docstring with double quotes
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 53
  fix:
    content: "\"\"\" Double quotes single line class docstring \"\"\""
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 53
  parent: ~
- kind:
    name: BadQuotesDocstring
    body: Single quote docstring found but double quotes preferred
    commit: Replace single quotes docstring with double quotes
    fixable: true
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 57
  fix:
    content: "\"\"\" Double quotes single line method docstring\"\"\""
    location:
      row: 6
      column: 8
    end_location:
      row: 6
      column: 57
  parent: ~
- kind:
    name: BadQuotesDocstring
    body: Single quote docstring found but double quotes preferred
    commit: Replace single quotes docstring with double quotes
    fixable: true
  location:
    row: 9
    column: 28
  end_location:
    row: 9
    column: 52
  fix:
    content: "\"\"\" inline docstring \"\"\""
    location:
      row: 9
      column: 28
    end_location:
      row: 9
      column: 52
  parent: ~

