crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_function.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- - kind:
      name: BadQuotesDocstring
      body: Single quote docstring found but double quotes preferred
      suggestion: Replace single quotes docstring with double quotes
      fixable: true
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 56
    fix:
      content: "\"\"\"function without params, single line docstring\"\"\""
      location:
        row: 2
        column: 4
      end_location:
        row: 2
        column: 56
    parent: ~
  - kind:
      name: BadQuotesDocstring
      body: Single quote docstring found but double quotes preferred
      suggestion: Replace single quotes docstring with double quotes
      fixable: true
    location:
      row: 8
      column: 4
    end_location:
      row: 10
      column: 7
    fix:
      content: "\"\"\"\n        function without params, multiline docstring\n    \"\"\""
      location:
        row: 8
        column: 4
      end_location:
        row: 10
        column: 7
    parent: ~
  - kind:
      name: BadQuotesDocstring
      body: Single quote docstring found but double quotes preferred
      suggestion: Replace single quotes docstring with double quotes
      fixable: true
    location:
      row: 27
      column: 4
    end_location:
      row: 27
      column: 27
    fix:
      content: "\"Single line docstring\""
      location:
        row: 27
        column: 4
      end_location:
        row: 27
        column: 27
    parent: ~

