crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    name: BadQuotesDocstring
    body: Double quote docstring found but single quotes preferred
    suggestion: Replace double quotes docstring with single quotes
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    edits:
      - location:
          row: 1
          column: 0
        end_location:
          row: 3
          column: 3
        content: "'''\nDouble quotes multiline module docstring\n'''"
  parent: ~
- kind:
    name: BadQuotesDocstring
    body: Double quote docstring found but single quotes preferred
    suggestion: Replace double quotes docstring with single quotes
    fixable: true
  location:
    row: 12
    column: 4
  end_location:
    row: 14
    column: 7
  fix:
    edits:
      - location:
          row: 12
          column: 4
        end_location:
          row: 14
          column: 7
        content: "'''\n    Double quotes multiline class docstring\n    '''"
  parent: ~
- kind:
    name: BadQuotesDocstring
    body: Double quote docstring found but single quotes preferred
    suggestion: Replace double quotes docstring with single quotes
    fixable: true
  location:
    row: 24
    column: 8
  end_location:
    row: 26
    column: 11
  fix:
    edits:
      - location:
          row: 24
          column: 8
        end_location:
          row: 26
          column: 11
        content: "'''\n        Double quotes multiline function docstring\n        '''"
  parent: ~

