crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_class.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
---
./resources/test/fixtures/flake8_quotes/docstring_doubles_class.py:2:5: Q002 [*] Double quote docstring found but single quotes preferred
  |
2 | class SingleLineDocstrings():
3 |     """ Double quotes single line class docstring """
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q002
4 |     """ Not a docstring """
  |
  = help: Replace double quotes docstring with single quotes

ℹ Suggested fix
1 1 | class SingleLineDocstrings():
2   |-    """ Double quotes single line class docstring """
  2 |+    ''' Double quotes single line class docstring '''
3 3 |     """ Not a docstring """
4 4 | 
5 5 |     def foo(self, bar="""not a docstring"""):

./resources/test/fixtures/flake8_quotes/docstring_doubles_class.py:6:9: Q002 [*] Double quote docstring found but single quotes preferred
  |
6 |     def foo(self, bar="""not a docstring"""):
7 |         """ Double quotes single line method docstring"""
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Q002
8 |         pass
  |
  = help: Replace double quotes docstring with single quotes

ℹ Suggested fix
3 3 |     """ Not a docstring """
4 4 | 
5 5 |     def foo(self, bar="""not a docstring"""):
6   |-        """ Double quotes single line method docstring"""
  6 |+        ''' Double quotes single line method docstring'''
7 7 |         pass
8 8 | 
9 9 |     class Nested(foo()[:]): """ inline docstring """; pass

./resources/test/fixtures/flake8_quotes/docstring_doubles_class.py:9:29: Q002 [*] Double quote docstring found but single quotes preferred
   |
 9 |         pass
10 | 
11 |     class Nested(foo()[:]): """ inline docstring """; pass
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^ Q002
   |
   = help: Replace double quotes docstring with single quotes

ℹ Suggested fix
6 6 |         """ Double quotes single line method docstring"""
7 7 |         pass
8 8 | 
9   |-    class Nested(foo()[:]): """ inline docstring """; pass
  9 |+    class Nested(foo()[:]): ''' inline docstring '''; pass


