crates/ruff/src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_module_multiline.py.snap
---
source: crates/ruff/src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- - kind:
      name: BadQuotesDocstring
      body: Double quote docstring found but single quotes preferred
      suggestion: Replace double quotes docstring with single quotes
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
    fix:
      content: "'''\nDouble quotes multiline module docstring\n'''"
      location:
        row: 1
        column: 0
      end_location:
        row: 3
        column: 3
    parent: ~

